test/earlyReturnQuantumIf.slq
def bar(const x:ğ”¹):!â„•{
	if x { return 0; } // error
	else { return 1; } // error
}
